kubernetes/cluster/privacy/filebrowser/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: privacy
  labels:
    app.kubernetes.io/name: filebrowser
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: drive.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
  tls:
    - hosts:
        - drive.brhd.io
